Remaining token position tests